--- a/src/components/Features.module.css
+++ b/src/components/Features.module.css
@@ -2,7 +2,7 @@
 
 .SupplyChainContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   font: 'Greycliff CF';
   gap: 20px;
@@ -10,39 +10,42 @@
 
 .SupplyChainContainer > div {
   padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   background: rgb(0, 0, 255,0.1);
   border-radius: 20px;
 }
 
 .heading {
   text-align: center;
-  margin-top: 20px;
-  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
+  font-family: 'Greycliff CF', sans-serif;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 1.75rem;
 }
 
 .grid {
   display: grid;
   gap: 20px;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .basicServicesGrid {
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .extendedServicesGrid {
   grid-template-columns: repeat(3, 1fr);
 }
 
+
 /* Mobile view */
 @media (max-width: 768px) {
   .SupplyChainContainer {
     flex-direction: column;
   }
-  .extendedServicesGrid {
+  .basicServicesGrid, .extendedServicesGrid {
     grid-template-columns: 1fr;
   }
 }
