--- a/src/components/Features.module.css
+++ b/src/components/Features.module.css
@@ -12,7 +12,7 @@
   padding: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
-  background: rgb(0, 0, 255,0.1);
+  background: #dddddd;
   border-radius: 20px;
 }
 
